syntax = "proto3";

option go_package = "github.com/BirdyDK/DS-handin4";

service Node {
    rpc ReceiveToken (TokenMessage) returns (TokenResponse);
}

message TokenMessage {}

message TokenResponse {}